# smaug

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml.example  justfile  rustfmt.toml  smaug.service.example
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  zizmor.yml
src/: email.rs  error.rs  main.rs  smaug.rs
