[package]
name = "smaug"
version = "0.1.0"
edition = "2024"
authors = ["Luis Schwab <luisschwab@protonmail.com"]
description = "Smaug watches your coins and sends you an email if they move"
license = "MIT"
readme = "README.md"
keywords = ["bitcoin", "email", "lotr"]

[dependencies]
esplora-client = { git = "https://github.com/bitcoindevkit/rust-esplora-client", features = ["blocking-https-rustls"] }
env_logger = "0.11.8"
log = "0.4.28"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "net", "macros"] }
toml = "0.9.5"
bitcoin = "0.32.7"
lettre = { version = "0.11.18", features = ["builder", "rustls-tls", "serde"] }
argh = "0.1.13"
