[package]
name = "smaug"
version = "1.6.0"
edition = "2024"
authors = ["Luis Schwab <luisschwab@protonmail.com"]
description = "smaug ðŸ‰ guards your coins and sends you an email if they move"
repository = "https://github.com/luisschwab/smaug"
license = "MIT"
readme = "README.md"
keywords = ["bitcoin", "email", "lotr"]

[dependencies]
esplora-client = { version = "0.12.2", features = ["blocking-https-rustls"] }
env_logger = "0.11.8"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "net", "macros"] }
toml = "0.9.9"
bitcoin = "0.32.8"
lettre = { version = "0.11.19", features = ["builder", "rustls-tls", "serde"] }
argh = "0.1.13"
